--- a/CLion/CMakeLists.txt
+++ b/CLion/CMakeLists.txt
@@ -3,4 +3,5 @@ project(CLion C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(CLion linked_list/201901268.c linked_list/201901268.c)
+add_executable(CLion Assignment_1/test.c)
+#add_executable(CLion Assignment_1/201901268_RSJ.c)
