--- a/CLion/CMakeLists.txt
+++ b/CLion/CMakeLists.txt
@@ -3,5 +3,5 @@ project(CLion C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(CLion Assignment_1/kjs.c)
-#add_executable(CLion Assignment_1/201901268_RSJ.c)
+#add_executable(CLion Assignment_1/kjs.c)
+add_executable(CLion Assignment_1/201901268_RSJ.c)
