--- a/CLion/CMakeLists.txt
+++ b/CLion/CMakeLists.txt
@@ -4,4 +4,6 @@ project(CLion C)
 set(CMAKE_C_STANDARD 11)
 
 #add_executable(CLion Assignment_1/kjs.c)
-add_executable(CLion heap/201901268.c)
+#add_executable(CLion heap/bjy.c)
+add_executable(CLion heap/201901268.c )
+#add_executable(CLion heap/lhs.c)
