--- a/CLion/CMakeLists.txt
+++ b/CLion/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_C_STANDARD 11)
 
 #add_executable(CLion Assignment_1/kjs.c)
 #add_executable(CLion heap/bjy.c)
-add_executable(CLion Dijkstra/201901268.c)
+#add_executable(CLion Assignment_2/data/subway.c)
+add_executable(CLion bjy/subway.c Assignment_2/data/subway.dSYM/asd.c)
 #add_executable(CLion heap/lhs.c)
